--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:theme="@style/Theme.RestaurantApp"
             tools:targetApi="31">
         <activity
-                android:name=".CustomerActivity"
+                android:name=".RestaurantActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
