--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:theme="@style/Theme.RestaurantApp"
             tools:targetApi="31">
         <activity
+                android:name=".view.DetailRestaurantActivity"
+                android:exported="false" />
+        <activity
                 android:name=".RestaurantActivity"
                 android:exported="true">
             <intent-filter>
