--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
             android:allowBackup="true"
@@ -14,6 +16,9 @@
             tools:targetApi="31">
         <activity
                 android:name=".view.DetailRestaurantActivity"
+                android:exported="false" />
+        <activity
+                android:name=".MapActivity"
                 android:exported="false" />
         <activity
                 android:name=".RestaurantActivity"
