--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 android:name=".MapActivity"
                 android:exported="false" />
         <activity
-                android:name=".RestaurantActivity"
+                android:name=".view.RestaurantListView"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
