--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.RestaurantApp"
-            tools:targetApi="31">
+            tools:targetApi="31"
+            android:usesCleartextTraffic="true">
         <activity
-                android:name=".view.DetailRestaurantActivity"
-                android:exported="false" />
+                android:name=".view.MenuItemListView"
+                android:exported="false"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
         <activity
                 android:name=".MapActivity"
                 android:exported="false" />
