--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,16 @@
         </activity>
         <activity
                 android:name=".RegisterActivity"
+                android:exported="false">
+        </activity>
+        <activity
+                android:name=".LoginActivity"
                 android:exported="true">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN"/>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-                    <category android:name="android.intent.category.LAUNCHER"/>
-                </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
                 android:name=".MapActivity"
